[package]
name = "itlrbs"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-itunes-library = "0.3.2"
rayon = "1.11.0"

id3rs = { git = "https://github.com/bzhoek/id3rs" }
#happer = { path = "../happer" }
anyhow = "1.0.100"
regex = "1.12.2"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
dotenvy = "0.15.7"
