[package]
name = "itlrbs"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-itunes-library = "0.3.2"
rayon = "1.11.0"

#rbsqlx = { git = "https://github.com/bzhoek/rbsqlx" }
rbsqlx = { path = "../rbsqlx" }
#id3rs = { git = "https://github.com/bzhoek/id3rs" }
id3rs = { path = "../id3rs" }
#happer = { path = "../happer" }
anyhow = "1.0.100"
regex = "1.12.2"
dotenvy = "0.15.7"
chrono = "0.4.42"
tokio = "1.48.0"
